- -A/--vaapi-device option changed to -D/--hw-device, and now is used for device selection in all hardware types
- error out when failing to create the watermark image, instead of warn and skip watermaking
- new option: select number of channels in the audio input device
- default number of channels in the audio input device changed from 2 to 1
- watermark font short option changed from -c to -F

### version 1.6.0 - 2020-09-19
- added support for AOM AV1 video encoder
- added support for rav1e AV1 video encoder
- added support for SVT AV1 video encoder
- added support for SVT HEVC video encoder
- added support for SVT VP9 video encoder
- added support for recording a lossless video without encoding it (through '-a none' and '-v none') (#9)
- new option: select tickness of the screen region border delimiter
- new option: select the X server display and screen
- only '-i none' can be used to disable audio recording, as '-a none' has now other functionality as above
- changed default font for text watermark to DejaVu-Sans
- lossless video is now moved to the output directory when using -K
- remove bc requirement for the fade effect
- fix: security issue with temporary directory (https://github.com/dbermond/screencast/issues/3)
- fix: broken pipe message with the 'tr' utility when generating a random string
- tests: use less restrictive encoders
- tests: allow to run tests without audio input (AUDIOIN='none')
- tests: allow to run tests in a user defined X server display through the USEDISPLAY environment variable
- tests: allow to set the font for text watermark through the WMARK_FONT environment variable
- documentation updates, improvements and fixes
- minor improvements and fixes
- cosmetic changes

### version 1.5.0 - 2018-01-05
- new feature: webcam overlay effect
- new feature: live streaming (tested only with YouTube)
- new feature: record in a one step process (record and encode at the same time)