@@ -190,7 +190,7 @@ Intel Media SDK to be installed. For details about the special value
 .PP
 .nf
         default: x264
-supported types: x264, h264_nvenc, h264_vaapi, h264_qsv,
+supported types: x264, openh264, h264_nvenc, h264_vaapi, h264_qsv,
                  x265, kvazaar, svt_hevc, hevc_nvenc, hevc_vaapi, hevc_qsv,
                  vp8, vp8_vaapi, vp9, svt_vp9, vp9_vaapi, theora, wmv,
                  aom_av1, svt_av1, rav1e, none
