@@ -16,6 +16,7 @@ https://github.com/dbermond/screencast/
 - new option: select number of channels in the audio input device
 - default number of channels in the audio input device changed from 2 to 1
 - watermark font short option changed from -c to -F
+- added support for OpenH264 video encoder
 
 ### version 1.6.0 - 2020-09-19
 - added support for AOM AV1 video encoder
